# rust-rocket-template

./: .env  Cargo.toml  README.md  Rocket.toml  docker-compose.yml
.github/workflows/: continuous_integration.yml
src/: config.rs  errors.rs  lib.rs  main.rs
src/api/: auth_middleware.rs
src/api/v1/: auth_controller.rs
src/db/: auth_repository.rs
src/models/: user.rs
src/services/: auth_service.rs
tests/: auth_tests.rs
tests/common/: mod.rs
