[package]
name = "rust-rocket-template"
version = "1.0.0"
authors = ["Ryan Christian <ryanchristian4427@gmail.com>"]
homepage = "https://github.com/RyanChristian4427/rust-rocket-template"
description = "A RESTful API template with authentication"
edition = "2018"

[dependencies]
chrono = {version = "0.4", features = ["serde"]}
diesel = {version = "1.4.1", features = ["postgres", "chrono"]}
frank_jwt = "3.1.1"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
rocket = { version = "0.4.2", features = ["tls"] }
rust-crypto = "0.2.36"
validator = "0.8.0"
validator_derive = "0.8.0"

[dependencies.rocket_contrib]
version = "0.4.1"
default-features = false
features = ["json", "diesel_postgres_pool"]

[dev-dependencies]
once_cell = "0.2.1"