[package]
name = "rust-rocket-template"
version = "1.0.0"
authors = ["Ryan Christian <ryanchristian4427@gmail.com>"]
homepage = "https://github.com/RyanChristian4427/rust-rocket-template"
description = "A RESTful API template with authentication"
edition = "2018"

[dependencies]
rocket = {version = "0.4.5", default-features = false}
serde = {version = "1.0.114", features = ["derive"]}
serde_json = "1.0.57"
rust-crypto = "0.2.36"
chrono = {version = "0.4.13", features = ["serde"]}
diesel = {version = "1.4.5", features = ["postgres", "chrono"]}
validator = "0.10.1"
validator_derive = "0.10.1"
jsonwebtoken = "7.2.0"
dotenv = "0.15.0"

[dependencies.rocket_contrib]
version = "0.4.1"
default-features = false
features = ["json", "diesel_postgres_pool"]

[dev-dependencies]
once_cell = "0.2.1"